--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 200px;
 }
 .nav-title{
     color: var(--Dark-01, #181818);
@@ -41,4 +42,16 @@ nav a{
     text-decoration: none;
     color: #474747;
     
+}
+/* header related styles */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
