--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,6 +12,23 @@ body{
     font-weight: 700;
     color:white;
     padding: 15px 35px
+    
+}
+.section-title{
+    color:  #181818;
+    text-align: center;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 700;
+    
+}
+.section-des{
+    color:  #757575;
+    text-align: center;
+    font-size: 18px;
+    
+    
+   
 }
 /* nav related styles */
 nav{
@@ -21,7 +38,7 @@ nav{
     padding: 0px 200px;
 }
 .nav-title{
-    color: var(--Dark-01, #181818);
+    color: #181818;
     font-size: 45px;
     font-weight: 800;
     
@@ -46,12 +63,45 @@ nav a{
 /* header related styles */
 .header{
     background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner .profile-pic{
     width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+    
+
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    
+}
+.banner-des{
+    margin-bottom: 20px;
+}
+.banner-content{
+    max-width: 500px;
+}
+
+/* main section styles */
+.about{
+    padding:130px;
+    border-radius: 10px;
+    background-color: #FFF8F3;
+    margin: 130px;
 }
