--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,9 +99,28 @@ nav a{
 }
 
 /* main section styles */
+main{
+    max-width: 1140px;
+    margin:0 auto;
+}
 .about{
     padding:130px;
     border-radius: 10px;
     background-color: #FFF8F3;
     margin: 130px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+/* .info-title{
+    color:  #757575;
+    text-align: center;
+    
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400; */
+
+.about-info{
+    text-align: center;
 }
